# geoproj

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: External.cmake
src/: main.cpp  voronoi.cpp  voronoi.h
